# aruba_res_map

./: .gitignore  LICENSE  Procfile  README.md  main.py  package-lock.json  package.json  pyproject.toml
map/: admin.py  models.py  urls.py  views.py
map/migrations/: 0001_initial.py  0002_location.py  0003_auto_20210619_0924.py  0004_auto_20210620_1823.py  0005_auto_20210622_1704.py  0006_auto_20210623_2241.py
map/static/map/: index.js  styles.css  styles.css.map
map/static/map/scss/: styles.scss
map/static/map/scss/.sass-cache/7d053f0f45486ccdd9955c273dc56ea4c39d92ea/: styles.scssc
map/static/map/scss/.sass-cache/85460eaf516708794f25c751eae13c3928552927/: styles.scssc
map/static/map/scss/.sass-cache/93e3c4b587d14b23155fbbad7558be2aa3baaaf1/: _rfs.scssc
map/static/map/scss/.sass-cache/95f63d69eaaf4bc2daf7bc6cf9f76e6c0ebfe6a8/: styles.scssc
map/static/map/scss/.sass-cache/aaa759eef3e49806a805d229108d112228668efe/: _accordion.scssc  _alert.scssc  _badge.scssc  _breadcrumb.scssc  _button-group.scssc  _buttons.scssc  _card.scssc  _carousel.scssc  _close.scssc  _containers.scssc  _dropdown.scssc  _forms.scssc  _functions.scssc  _grid.scssc  _helpers.scssc  _images.scssc  _nav.scssc  (+19 more)
map/templates/map/: help.html  index.html  layout.html  sources.html
res/: asgi.py  settings.py  urls.py  wsgi.py
res/map/: models.py  urls.py  views.py
res/map/migrations/: 0001_initial.py  0002_location.py  0003_auto_20210619_0924.py
res/map/static/map/: index.js  sources.js  styles.css
res/map/templates/map/: index.html  layout.html  sources.html
res/res/: settings.py
(+41 files in other folders)
